# OlioOhjelmointi

./: .gitignore  README.md
KT3/: CMakeLists.txt  chef.h  italianchef.cpp  italianchef.h  main.cpp
KotiT1/: main.cpp
Kotitehtava5/: asunto.cpp  asunto.h  katutaso.cpp  kerros.cpp  kerros.h  main.cpp
Teht4/: asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  main.cpp
